tests/patching/errors/find_wrong_target.dby
import std.buffer as buf
buf.find(b"\x01", b"\x01")
